--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ node_modules/
 # Ignore package-lock.json and package.json file
 package-lock.json
 package.json
+
+# Ignore all file in flask_session folder
+flask_session/
